# cloud-midterm

./: .gitignore  README.md  client.py
cdk/: app.py  cdk.context.json  pyproject.toml
cdk/cdk/: cdk_stack.py  custom_ec2.py  sql_server.py
cdk/cdk/db_asset/: sql_setup.sh
cdk/cdk/server_asset/: server_cmd.sh
client/: requirements.txt
server/: .env  go.mod  go.sum  main.go
server/controllers/: message_controller.go
server/database/: open_db_connection.go  postgres.go
server/models/: message.go
server/queries/: message_query.go  updated_message_query.go
